# gazecom

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  gazecom.spec
.github/workflows/: ci.yml  release.yml
backend/: README.md  pyproject.toml
backend/gengaze/: __init__.py  comfy_client.py  config.py  instance.py  launcher.py  main.py  user_config.py  workflow.py  workflow_catalog.py
backend/gengaze/routes/: __init__.py  config.py  generate.py  images.py  llm.py  workflows.py
backend/tests/: test_comfy_client.py  test_config.py  test_llm_routes.py  test_routes.py  test_workflow.py
docs/: DEVELOPMENT.md
frontend/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/e2e/: core-flow.spec.ts
frontend/patches/: heatmap.js@2.0.5.patch
frontend/src/: App.tsx  main.tsx
frontend/src/canvas/: Composite.test.ts  Composite.ts  CompositeBounds.test.ts  CompositeBounds.ts  CompositeStore.ts  EventHistory.test.ts  EventHistory.ts  Heatmap.test.ts  Heatmap.ts  HeatmapInstance.ts  PullTool.css  PullTool.tsx  clearAndReseed.ts  downloadComposite.ts  h337.d.ts  pullHandle.ts
frontend/src/generation/: api.ts  captureHeatmap.ts  epoch.ts  llm.ts  pipeline.test.ts  pipeline.ts  workflows.test.ts  workflows.ts
frontend/src/lib/: images.ts  persistence.test.ts  persistence.ts
frontend/src/prompts/: index.ts  lists.ts  placeholders.test.ts  placeholders.ts  pool.test.ts  pool.ts
frontend/src/store/: index.test.ts  index.ts
frontend/src/styles/: global.css
frontend/src/trackers/: CursorTracker.test.ts  CursorTracker.ts  HandposeTracker.test.ts  HandposeTracker.ts  Roam2Tracker.test.ts  Roam2Tracker.ts  RoamTracker.test.ts  RoamTracker.ts  (+13 more)
scripts/: build-app.ps1  build-app.sh  gazeCOM.command
workflows/edit/: flux.2 klein.json
workflows/img/: .gitkeep  z-image turbo.json
workflows/inpainting/: flux.2 klein inpaint.json
(+32 files in other folders)
